demos/spiffe-cross-boundary/cluster/externalworkload.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-echo
  namespace: mixed-env
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: edge-echo
