demos/spiffe-cross-boundary/cluster/authz-edge-server.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  namespace: mixed-env
  name: edge-allow-client
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: edge-echo-http
  requiredAuthenticationRefs:
    - name: allow-client-sa
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
