demos/spiffe-cross-boundary/cluster/authz.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  namespace: mixed-env
  name: echo-allow-edge
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: echo-http
  requiredAuthenticationRefs:
    - name: allow-edge
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
